# iam-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/agents/: cli-developer.md  iam-policy-evaluator-tester.md
.github/workflows/: ci.yml
examples/: demo.sh
examples/.claude/: settings.local.json
examples/aws-samples/: README.md  condition-operators-demo.sh  data-perimeter-demo.sh  rcp-demo.sh
examples/context/: cross-account-resource.json  insecure-transport.json  mfa-present.json  principal-context.json  request-context.json  resource-context.json  secure-transport.json
src/: error.rs  lib.rs  main.rs
src/arn/: arn.rs  mod.rs  pattern.rs  types.rs
src/cli/: args.rs  context_files.rs  mod.rs  org_config.rs
src/eval/: condition_eval.rs  context.rs  context_bags.rs  decision.rs  engine.rs  hierarchy.rs  matchers.rs  mod.rs  principal.rs  variables.rs
src/policy/: action.rs  ast.rs  grammar.pest  mod.rs  validation.rs
src/service/: cache.rs  fetcher.rs  mod.rs  types.rs
tests/: aws_samples_tests.rs  integration_tests.rs
tests/fixtures/aws-samples/: README.md
tests/fixtures/aws-samples/rcp/: deny-third-party-s3-access.json  enforce-https-only.json  enforce-s3-presigned-expiry.json  enforce-s3-tls-version.json  identity-perimeter.json  restrict-github-oidc.json  restrict-kms-grants.json
tests/fixtures/aws-samples/scp/: data-perimeter-governance.json  data-perimeter-network-sourcevpc.json  data-perimeter-network-vpceorgid.json  data-perimeter-resource.json  deny-iam-from-unexpected-networks.json  deny-region-outside-allowed.json  (+4 more)
tests/fixtures/boundaries/: delegated-admin-boundary.json  deny-sensitive-resources.json  s3-cloudwatch-ec2-only.json
tests/fixtures/conditions/: arn-not-like-multiple.json  not-ip-address-multiple.json  string-not-equals-multiple.json  string-not-equals-single.json
tests/fixtures/identity/: allow-dynamodb-read.json  allow-ec2-full.json  allow-s3-full.json  allow-s3-not-resource.json  allow-s3-read.json  allow-sts-assume-role.json  deny-s3-delete.json
tests/fixtures/organization/: example-org.yaml  mfa-required.yaml  rcp-org-only.yaml  region-restriction.yaml
tests/fixtures/rcp/: restrict-s3-to-org.json
tests/fixtures/resource/: s3-bucket-cross-account-root.json  s3-bucket-cross-account-specific-arn.json  s3-bucket-cross-account.json  s3-bucket-https-only.json  s3-bucket-ip-restricted.json  s3-bucket-not-principal.json  s3-bucket-org-only.json  s3-bucket-public-read.json  s3-bucket-require-encryption.json  trust-policy-cross-account.json  trust-policy-service.json
tests/fixtures/scp/: deny-leave-organization.json  deny-region-outside-eu.json  deny-region-outside-us.json  deny-root-user-ec2.json  full-aws-access.json  protect-iam-role.json  require-mfa-ec2-terminate.json
tests/fixtures/session/: read-only-session.json  s3-only-session.json
tests/fixtures/vpc-endpoint/: allow-all.json  s3-read-only.json  s3-specific-bucket.json
(+1 files in other folders)
