[package]
name = "iam-analyzer"
version = "0.1.0"
edition = "2024"
description = "AWS IAM policy evaluation CLI tool"
license = "MIT"
repository = "https://github.com/jplock/iam-analyzer"
keywords = ["aws", "iam", "policy", "security"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
serde = { version = "=1.0.228", default-features = false, features = ["std", "derive"] }
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
pest = { version = "=2.8.4", default-features = false, features = ["std"] }
pest_derive = { version = "=2.8.4", default-features = false, features = ["std"] }
clap = { version = "=4.5.53", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color", "suggestions"] }
thiserror = { version = "=2.0.17", default-features = false, features = ["std"] }
chrono = { version = "=0.4.42", default-features = false, features = ["std", "clock"] }
ipnet = { version = "=2.11.0", default-features = false, features = ["std"] }
reqwest = { version = "=0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
directories = { version = "=6.0", default-features = false }

[dev-dependencies]
# Using std test framework only

[profile.release]
lto = true
codegen-units = 1
strip = true
