[package]
name = "iam-analyzer"
version = "0.1.0"
edition = "2024"
description = "AWS IAM policy evaluation CLI tool"
license = "MIT"
repository = "https://github.com/jplock/iam-analyzer"
keywords = ["aws", "iam", "policy", "security"]
categories = ["command-line-utilities", "authentication"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yml = { version = "0.0", default-features = false }
pest = { version = "2.8", default-features = false, features = ["std"] }
pest_derive = { version = "2.8", default-features = false, features = ["std"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color", "suggestions", "env"] }
clap_complete = { version = "4.5", default-features = false }
anstyle = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ipnet = { version = "2.11", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-tls"] }
directories = { version = "6.0", default-features = false }
rustc-hash = { version = "2.1", default-features = false, features = ["std"] }

[dev-dependencies]
# Using std test framework only

[profile.release]
lto = true
codegen-units = 1
strip = true
